<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_archived"
        android:title="@string/show_archived"
        android:icon="@drawable/ic_menu_archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive"
        android:title="@string/archive_chat"
        android:icon="@drawable/ic_menu_archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_unarchive"
        android:title="@string/unarchive_chat"
        android:icon="@drawable/ic_menu_archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/rename_chat"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_chat"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share_chat"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom" />

</menu>
